--- a/src/partials/gallery/gallery.css
+++ b/src/partials/gallery/gallery.css
@@ -13,7 +13,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 375px;
+  width: 370px;
   height: 100%;
   border-radius: 36px;
   border: 2px solid #000;
@@ -21,6 +21,10 @@
   background-position: center;
   background-color: rgba(107, 57, 208, 0.1);
   z-index: -1;
+
+  @media screen and (min-width: 400px) {
+        width: 375px;
+      }
 }
 
 .gallery-title {
